--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: app-para-aws
-          path: deploy/app.jar
+          path: deploy/*.jar
 
       - name: Simulated deploy step
         run: echo "Aquí se desplegaría a AWS Elastic Beanstalk si tuvieras credenciales"
